fixed issues with contact page

--- a/contact.html
+++ b/contact.html
@@ -105,12 +105,15 @@
 
    
     
-     <div  class= "navbar navbar-fixed-bottom">
+<div class= "row">
+
+    <div class= "navbar navbar-inverse navbar-fixed-bottom">
 
       <div class = container>
-        <center><p class = "navbar-text"> ©Copyright 2017 Yolisa Bam</p>
+        <p class = "navbar-text"> ©Copyright 2017 Yolisa Bam</p>
       </div>
-    </div> 
+    </div>  
+</div> 
 
 
 </body>
