debugged final version

--- a/index.html
+++ b/index.html
@@ -75,18 +75,19 @@
         </div>
           <div class="panel-body">
             <div class="col-sm-4">
-              <img class="img img-thumbnail" src="assets/images/STACKOVERFLOW-128.png">
+              <a href="https://stackoverflow.com/users/8432264/yolisa-bam?tab=profile"><img class="img img-thumbnail" src="assets/images/STACKOVERFLOW-128.png">
             </div>
             <div class="col-sm-4">
-              <img class="img img-thumbnail" src="assets/images/linkedin_six_black-128.png">
+              <a href="https://www.linkedin.com/in/yolisa-bam-41a39b65/"><img class="img img-thumbnail" src="assets/images/linkedin_six_black-128.png">
             </div>
             <div class="col-sm-4">
-              <img class="img img-thumbnail" src="assets/images/github_six_color-128.png">
+              <a href="https://github.com/yolisabam"><img class="img img-thumbnail" src="assets/images/github_six_color-128.png">
             </div>
           </div>
        </div>
        </div> 
     </div>
+
 
 
 
