--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Yolisa Bam</a>
+        <a class="navbar-brand" href="index.html">Yolisa Bam</a>
           </div>
             <ul class="nav navbar-nav navbar-right">        
               <li><a href="index.html">About</a></li>
@@ -87,13 +87,13 @@
         </div>
           <div class="panel-body">
             <div class="col-sm-4">
-              <img class="img img-thumbnail" src="assets/images/STACKOVERFLOW-128.png">
+              <a href="https://stackoverflow.com/users/8432264/yolisa-bam?tab=profile"><img class="img img-thumbnail" src="assets/images/STACKOVERFLOW-128.png">
             </div>
             <div class="col-sm-4">
-              <img class="img img-thumbnail" src="assets/images/linkedin_six_black-128.png">
+              <a href="https://www.linkedin.com/in/yolisa-bam-41a39b65/"><img class="img img-thumbnail" src="assets/images/linkedin_six_black-128.png">
             </div>
             <div class="col-sm-4">
-              <img class="img img-thumbnail" src="assets/images/github_six_color-128.png">
+              <a href="https://github.com/yolisabam"><img class="img img-thumbnail" src="assets/images/github_six_color-128.png">
             </div>
           </div>
        </div>
