portforlio almost done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/css/particles.css"/>  
+     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css"/>  
+    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 </head>
 <body>
   <section class="clearfix" id="hero">
@@ -21,19 +23,38 @@
   <!-- particles -->
     <div class="particles" id="particles-js"></div>
   <!-- heading -->
-    <div id="heading"><h1>FRONT-END DEVELOPER</h1></div>
+    <div id="heading">
+      <div class=container>
+      <center><h1>FRONT END ENGINEER BASED IN SF</h1></center>
+    </div>
+    </div>
   </section>
   <section class="about" id="one">  
     <div class="container">
-    <h2>PROJECTS</h2>
-    <div class = "row"><h3>01</h3></div>
-  </div>
+      <h2><strong>PROJECTS</strong></h2>
+    </div>
   </section>
   <section class="projects" id="two">
-    <h2>ABOUT</h2>
+    <div class = "row"> 
+      <div class="container">
+        <h2><strong>ABOUT</strong></h2>
+        <br>
+         <p class="bio">Front-End Developer with a solid comprehension of HTML, CSS, JQuery, and Javascript, Handlebars. A technology and internet marketing enthusiast with a corporate background in communication, research, and management. Experience specializing in social media content strategy, search engine optimization, and web development. Possessing stellar project management skills, I apply to the lifestyle/tech blog I run. An avid leader who drives team collaboration while taking ownership of the projects from inception to completion to maximize the outcome.
+        </p>
+        <br>
+        <p class = "skills">Fluent in: HTML5, CSS,  Javascript, Mongo DB, Express, Node</p>
+        <br>
+        <p class="skills">I Love: React, Git, Heroku, REST,  npm warning messages, CRM</p>
+        <br>
+      </div> 
+  </section>  
   </section>
   <section class="contact" id="three">
-    <h2>CONTACT</h2>
+     <div class="container">
+      <div class="wrapper"> 
+        <h2><strong>CONTACT</strong></h2>
+      </div>
+     </div> 
   </section>
   <script type="text/javascript" src="./assets/js/particles.js"></script>
   <script type="text/javascript" src="./assets/js/app.js"></script>
