--- a/index.html
+++ b/index.html
@@ -25,13 +25,22 @@
   <!-- heading -->
     <div id="heading">
       <div class=container>
-      <center><h1>FRONT END ENGINEER BASED IN SF</h1></center>
+      <center><h1>FRONT END DEVELOPER BASED IN SF</h1></center><br>
+      <center><h6>CHANNELING CREATIVE ENERGY INTO DEVELOPING SOLUTIONS AS A SOFTWARE ENGINEER.</h6></center>
     </div>
     </div>
   </section>
   <section class="about" id="one">  
     <div class="container">
       <h2><strong>PROJECTS</strong></h2>
+      <br>
+      <div class="row">
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="..." alt="...">
+            </a>
+          </div>   
+      </div>
     </div>
   </section>
   <section class="projects" id="two">
