--- a/index.html
+++ b/index.html
@@ -37,9 +37,47 @@
       <div class="row">
           <div class="col-xs-6 col-md-3">
             <a href="#" class="thumbnail">
-              <img src="..." alt="...">
+              <img src="." alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="." alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="." alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="." alt="...">
+            </a>
+          </div>
+        </div>  
+        <div class="row">
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="." alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="." alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="." alt="...">
+            </a>
+          </div>
+          <div class="col-xs-6 col-md-3">
+            <a href="#" class="thumbnail">
+              <img src="." alt="...">
             </a>
           </div>   
+      </div>   
       </div>
     </div>
   </section>
@@ -60,8 +98,16 @@
   </section>
   <section class="contact" id="three">
      <div class="container">
+      <h2><strong>CONTACT</strong></h2>
       <div class="wrapper"> 
-        <h2><strong>CONTACT</strong></h2>
+        <div class="col-md-3">
+          <p>ndjksnjk</p>
+        </div>
+
+        <div class="col-md-2">
+          <p>dsnkjsdnksdk</p>
+        </div>  
+
       </div>
      </div> 
   </section>
