mappign gallery for portfolio

--- a/index.html
+++ b/index.html
@@ -35,48 +35,39 @@
       <h2><strong>PROJECTS</strong></h2>
       <br>
       <div class="row">
-          <div class="col-xs-6 col-md-3">
+          <div class="col-xs-6 col-md-4">
             <a href="#" class="thumbnail">
-              <img src="." alt="...">
+              <img src="./assets/images/GIPHY.png" alt="...">
             </a>
           </div>
-          <div class="col-xs-6 col-md-3">
+          <div class="col-xs-6 col-md-4">
             <a href="#" class="thumbnail">
-              <img src="." alt="...">
+              <img src="./assets/images/GIPHY.png" alt="...">
             </a>
           </div>
-          <div class="col-xs-6 col-md-3">
+          <div class="col-xs-6 col-md-4">
             <a href="#" class="thumbnail">
-              <img src="." alt="...">
-            </a>
-          </div>
-          <div class="col-xs-6 col-md-3">
-            <a href="#" class="thumbnail">
-              <img src="." alt="...">
+              <img src="./assets/images/GIPHY.png" alt="...">
             </a>
           </div>
         </div>  
         <div class="row">
-          <div class="col-xs-6 col-md-3">
+
+           <div class="col-xs-6 col-md-4">
             <a href="#" class="thumbnail">
-              <img src="." alt="...">
+              <img src="./assets/images/GIPHY.png" alt="...">
             </a>
           </div>
-          <div class="col-xs-6 col-md-3">
+           <div class="col-xs-6 col-md-4">
             <a href="#" class="thumbnail">
-              <img src="." alt="...">
+              <img src="./assets/images/GIPHY.png" alt="...">
             </a>
           </div>
-          <div class="col-xs-6 col-md-3">
+           <div class="col-xs-6 col-md-4">
             <a href="#" class="thumbnail">
-              <img src="." alt="...">
+              <img src="./assets/images/GIPHY.png" alt="...">
             </a>
-          </div>
-          <div class="col-xs-6 col-md-3">
-            <a href="#" class="thumbnail">
-              <img src="." alt="...">
-            </a>
-          </div>   
+          </div>  
       </div>   
       </div>
     </div>
