--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="container">
       <h2><strong>PROJECTS</strong></h2>
       <br>
+      <div class="gallery-wrapper">
       <div class="row">
           <div class="col-xs-6 col-md-4">
             <a href="#" class="thumbnail">
@@ -67,9 +68,11 @@
             <a href="#" class="thumbnail">
               <img src="./assets/images/GIPHY.png" alt="...">
             </a>
-          </div>  
+          </div> 
+
       </div>   
       </div>
+    </div>
     </div>
   </section>
   <section class="projects" id="two">
