--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="alumn-content-wrap">
             <h3 class="album-title"></h3>
             <p> class= "album-release"></p>
-            <p class="album-buy-wrapper"><a href="" target="_blank" class="album-buy-link">BUY</a></p>
+            <p class="album-buy-wrapper"><a href="" target="_blank" class="album-buy-link">SEE ON GITHUB</a></p>
           </div>   
         </div>`;
 
