--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <center><h3>CONTACT ME</h3>
           <a href="mailto:yolisambam@gmail.com?Subject=Hello%20Yolisa!"><h4>yolisambam@gmail.com</h4></a>
           <div class="stream">
+            <a href="https://www.twitter.com/yolisabam/" target="_blank"><img src="img/twitter.png"></a>
+          </div>
+          <div class="stream">
             <a href="https://www.instagram.com/yolisabam/" target="_blank"><img src="img/evie-IG.png"></a>
           </div>
           <div class="stream">
